# prompt-saver-mcp

./: .cursorrules  .env.example  .gitignore  HOW_TO_USE.md  README.md  START_HERE.md  VERIFY_SETUP.sh  claude_desktop_config.json.example  pyproject.toml
docs/: CLEANUP_BEHAVIOR.md  CURSOR_NATURAL_LANGUAGE.md  CURSOR_USAGE.md  GETTING_STARTED.md  HOW_TO_USE_NATURAL_LANGUAGE.md  MCP_ONLY_WORKFLOW.md  NATURAL_LANGUAGE_QUICKSTART.md  README.md  SETUP_NATURAL_LANGUAGE.md  USAGE_EXAMPLE.md  WHY_CLAUDE_DESKTOP.md
prompt_saver_mcp/: __init__.py  config.py  server.py
prompt_saver_mcp/database/: __init__.py  models.py  mongodb_client.py
prompt_saver_mcp/embeddings/: voyage_client.py
prompt_saver_mcp/llm/: __init__.py  openai_client.py
prompt_saver_mcp/tools/: __init__.py  get_prompt_details.py  improve_prompt_from_feedback.py  preview_prompt.py  save_approved_prompt.py  save_prompt.py  search_prompts.py  search_prompts_by_use_case.py  update_prompt.py
prompt_saver_mcp/utils/: __init__.py  prompt_formatter.py
scripts/: __init__.py  cursor_prompt_helper.py  prompt_helper.py  save_branch_prompt.py
tests/: __init__.py  test_save_prompt.py  test_search_prompt.py
